--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Side project ",
   "main": "app.js ",
   "scripts": {
-    "start": "nodemon server.js"
+    "start:dev": "nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js"
   },
   "author": "Aaditya",
   "license": "ISC",
