using mongoose to ocnnect to the database

--- a/config.env
+++ b/config.env
@@ -1,4 +1,7 @@
 NODE_ENV = development 
 PORT=3000
-USERNAME=aaditya
-PASSWORD=123456
+
+DATABASE = mongodb+srv://takkar94:<PASSWORD>@cluster0.op1esxl.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_PASSWORD = 4CBWFLEa1DPcmDou
+
+
