--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Side project ",
   "main": "app.js ",
   "scripts": {
-    "start:dev": "nodemon server.js",
+    "start": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js"
   },
   "author": "Aaditya",
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^5.13.21",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
