--- a/config.env
+++ b/config.env
@@ -1,7 +1,5 @@
-NODE_ENV = development 
+NODE_ENV=development
 PORT=3000
-
-DATABASE = mongodb+srv://takkar94:<PASSWORD>@cluster0.op1esxl.mongodb.net/natours?retryWrites=true&w=majority
-DATABASE_PASSWORD = 4CBWFLEa1DPcmDou
-
-
+DATABASE=mongodb+srv://jonas:<PASSWORD>@cluster0-pwikv.mongodb.net/natours?retryWrites=true
+DATABASE_LOCAL=mongodb://localhost:27017/natours
+DATABASE_PASSWORD=On0adDgBCE5ECWh6
