--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
 PORT=3000
 DATABASE = mongodb+srv://takkar94:<PASSWORD>@cluster0.op1esxl.mongodb.net/natours?retryWrites=true&w=majority
-DATABASE_LOCAL=mongodb://localhost:27017/natours
+DATABASE_LOCAL=mongodb://localhost:27017/natours CBWFLEa1DPcmDou
 DATABASE_PASSWORD=4CBWFLEa1DPcmDou
