--- a/config.env
+++ b/config.env
@@ -3,3 +3,6 @@ PORT=3000
 DATABASE = mongodb+srv://takkar94:<PASSWORD>@cluster0.op1esxl.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours CBWFLEa1DPcmDou
 DATABASE_PASSWORD=4CBWFLEa1DPcmDou
+
+JWT_SECRET=my-ultra-secure-and-ultra-long-secret
+JWT_EXPIRES_IN=90d
