password reset token

--- a/config.env
+++ b/config.env
@@ -6,3 +6,10 @@ DATABASE_PASSWORD=4CBWFLEa1DPcmDou
 
 JWT_SECRET=my-ultra-secure-and-ultra-long-secret
 JWT_EXPIRES_IN=90d
+
+
+EMAIL_USERNAME= 44382681100679
+EMAIL_PASSWORD= fb86f8e5805b0d
+EMAIL_HOST= sandbox.smtp.mailtrap.io
+EMAIL_PORT = 2525
+
