--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.5.2",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.9.8",
     "slugify": "^1.3.4",
-    "validator": "^10.11.0"
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
