--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.1.5",
+    "express-sanitize": "^1.0.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.5.2",
     "morgan": "^1.9.1",
     "nodemailer": "^6.9.8",
     "slugify": "^1.3.4",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
