--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-rate-limit": "^7.1.5",
     "express-sanitize": "^1.0.1",
     "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.5.2",
     "morgan": "^1.9.1",
